# MusicTogether-App

./: CMakeLists.txt  README.md
include/: autorization.h  customtablemodel.h  main_page.h  mainwindow.h  music.h  qlabel_clicked.h  room_page.h  rooms.h  stylewind.h
src/: autorization.cpp  customtablemodel.cpp  main.cpp  main_page.cpp  mainwindow.cpp  music.cpp  qlabel_clicked.cpp  room_page.cpp  rooms.cpp  stylewind.cpp
ui/: mainwindow.ui  rooms.ui
